[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asyncio-actors"
version = "0.1.0"
description = "OTP-inspired actor primitives for Python's asyncio with supervision trees, bounded inboxes, and async-sync bridge"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["asyncio", "actors", "concurrency", "otp", "supervision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["asyncio_actors*"]

[tool.setuptools.package-data]
asyncio_actors = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
