[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fp-combinators"
version = "0.1.0"
description = "Lightweight functional programming combinators: pipe, compose, first_some"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "pyright>=1.1"]
