[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-combinators"
version = "0.1.0"
description = "Lightweight functional programming combinators: pipe, compose, first_some"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fp_combinators*"]

[tool.setuptools.package-data]
fp_combinators = ["py.typed", "*.pyi"]
