[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hulista"
version = "0.1.1"
description = "Functional, immutable, concurrent Python — all batteries included"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["functional", "immutable", "concurrency", "asyncio", "typing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "asyncio-actors>=0.1.1",
    "fp-combinators>=0.1.1",
    "live-dispatch>=0.1.1",
    "persistent-collections>=0.1.1",
    "sealed-typing>=0.1.1",
    "taskgroup-collect>=0.1.1",
    "with-update>=0.1.1",
]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Documentation = "https://rahulrajaram.github.io/hulista/"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hulista*"]

[tool.setuptools.package-data]
hulista = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
