[build-system]
requires = ["hatchling>=1.10"]
build-backend = "hatchling.build"

[project]
name = "hulista"
version = "0.1.0"
description = "Functional, immutable, concurrent Python — all batteries included"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["functional", "immutable", "concurrency", "asyncio", "typing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Documentation = "https://rahulrajaram.github.io/hulista/"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "mypy>=1.19", "build>=1.3"]
pydantic = ["pydantic>=2.0"]

[tool.hatch.build.targets.wheel]
packages = ["hulista/hulista"]
only-packages = true

[tool.hatch.build.targets.wheel.force-include]
"../asyncio-actors/asyncio_actors" = "asyncio_actors"
"../fp-combinators/fp_combinators" = "fp_combinators"
"../live-dispatch/live_dispatch" = "live_dispatch"
"../persistent-collections/persistent_collections" = "persistent_collections"
"../sealed-typing/sealed_typing" = "sealed_typing"
"../taskgroup-collect/taskgroup_collect" = "taskgroup_collect"
"../with-update/with_update" = "with_update"

[tool.hatch.build.targets.sdist]
include = [
    "hulista",
    "tests",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.build.targets.sdist.force-include]
"../asyncio-actors/asyncio_actors" = "asyncio_actors"
"../fp-combinators/fp_combinators" = "fp_combinators"
"../live-dispatch/live_dispatch" = "live_dispatch"
"../persistent-collections/persistent_collections" = "persistent_collections"
"../sealed-typing/sealed_typing" = "sealed_typing"
"../taskgroup-collect/taskgroup_collect" = "taskgroup_collect"
"../with-update/with_update" = "with_update"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
