[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "live-dispatch"
version = "0.1.0"
description = "Runtime-extensible dispatch with multiple dispatch, predicate dispatch, and versioning"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["dispatch", "multiple-dispatch", "predicate-dispatch", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Documentation = "https://rahulrajaram.github.io/hulista/"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["live_dispatch*"]

[tool.setuptools.package-data]
live_dispatch = ["py.typed"]
