[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "persistent-collections"
version = "0.1.0"
description = "Immutable persistent collections with structural sharing (HAMT-based)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["persistent", "immutable", "hamt", "functional", "collections"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
bench = ["memory-profiler"]

[tool.setuptools.packages.find]
where = ["."]
include = ["persistent_collections*"]

[tool.setuptools.package-data]
persistent_collections = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
