[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persistent-collections"
version = "0.1.1"
description = "Immutable persistent collections with structural sharing (HAMT-based)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["persistent", "immutable", "hamt", "functional", "collections"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Documentation = "https://rahulrajaram.github.io/hulista/"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]
bench = ["memory-profiler", "pytest-benchmark>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["persistent_collections*"]

[tool.setuptools.package-data]
persistent_collections = ["py.typed", "*.pyi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
