[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskgroup-collect"
version = "0.1.0"
description = "TaskGroup variant that collects all errors instead of aborting on the first"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

[project.urls]
"Bug Tracker" = "https://github.com/python/cpython/issues/101581"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["taskgroup_collect*"]

[tool.setuptools.package-data]
taskgroup_collect = ["py.typed"]

[tool.ruff]
target-version = "py311"
