[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskgroup-collect"
version = "0.1.0"
description = "TaskGroup variant that collects all errors instead of aborting on the first"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["asyncio", "taskgroup", "structured-concurrency", "exceptiongroup", "concurrency"]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=9.0", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["taskgroup_collect*"]

[tool.setuptools.package-data]
taskgroup_collect = ["py.typed"]

[tool.ruff]
target-version = "py311"
