[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "with-update"
version = "0.1.0"
description = "Record update syntax for frozen dataclasses and Pydantic models via | operator"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = ["pytest>=7.0", "pydantic>=2.0"]
