[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "with-update"
version = "0.1.1"
description = "Record update syntax for frozen dataclasses and Pydantic models via | operator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Rahul Rajaram", email = "rahulrajaram2005@gmail.com"}]
keywords = ["dataclasses", "pydantic", "record-update", "immutable", "validation"]

[project.urls]
Homepage = "https://github.com/rahulrajaram/hulista"
Repository = "https://github.com/rahulrajaram/hulista"
"Bug Tracker" = "https://github.com/rahulrajaram/hulista/issues"
Changelog = "https://github.com/rahulrajaram/hulista/blob/master/CHANGELOG.md"

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
dev = ["pytest>=9.0", "pytest-cov>=5.0", "pytest-benchmark>=5.0", "mypy>=1.19", "build>=1.3", "pydantic>=2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["with_update*"]

[tool.setuptools.package-data]
with_update = ["py.typed"]
